# tilepad-example-rs

./: Cargo.toml  Makefile.toml  README.md
.tilepadPlugin/: manifest.json
src/: action.rs  messages.rs  plugin.rs  state.rs
