[package]
name = "tilepad-plugin"
version = "0.0.1"
edition = "2024"

# CI expects the produced binary names to always be "tilepad-plugin" for bundling
[[bin]]
name = "tilepad-plugin"
path = "src/main.rs"

[dependencies]
# Plugin SDK
tilepad-plugin-sdk = "0.6.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
